test/spec_vectors/local_set/fail/module_27.wat
(module (func $type-empty-vs-f64 (param f64) (result f64) (local.set 0 (f64.const 1))))